--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "astro": "^4.16.5",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@iconify-json/skill-icons": "^1.2.0",
+    "astro-icon": "^1.1.1"
   }
 }
