--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@iconify-json/catppuccin": "^1.2.4",
     "@iconify-json/skill-icons": "^1.2.0",
     "astro-icon": "^1.1.1"
   }
